# GradexTool

./: .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  README.md  main.py  mypy_errors.txt  pyproject.toml  pytest.ini  requirements.txt  ruff_errors.txt  run_checks.ps1
.github/workflows/: ci.yml  pre-commit.yml
TODOs/: TODOs.md
configs/: __init__.py  config.yaml  configs.yaml  logging_config.py
data/: __init__.py  abilities.json  accounts.json  base_types.json  caught_revomon.json  caught_revomon_scan_state.json  counterdex.json  evolutions.json  fruitys.json  items.json  medicines.json  moves.json  natures.json  owned_lands.json  revomon.json  revomon_moves.json  type_charts.json  types.json  users.json
mods/: __init__.py  accounts.json
mods/core/: enforcement.py  health.py
mods/elevens_arena/: tierlist1.py  tierlist2.py
mods/example_mod/: base_cog.py
mods/grappraisal/: grade_command.py  grade_keyword.py
mods/guardrails/: users.py
mods/revocord/: __init__.py  activity.py  broadcaster.py  dashboard.py  hunting.py  portal.py  setup.py  shared.py  tv.py  wilds_loop.py
mods/revomon/: __init__.py  podium_command.py  podium_keyword.py  pvp_command.py  pvp_keyword.py  revo.py
scripts/: abilities.py  base_types.py  capsules.py  caught_revomon.py  evolutions.py  fruitys.py  gradexDB.py  helpers.py  items.py  main.py  medicines.py  movepools.py  moves.py  natures.py  podium.py  restore_test.py  revomon.py  type_charts.py  upload_emojis.py
tests/: __init__.py  conftest.py  debug_setup_fail.py  debug_test.py  fix_enforcement_coverage.py  fix_enforcement_coverage_2.py  fix_enforcement_coverage_3.py  fix_health_coverage.py  fix_health_coverage_2.py  fix_hunting_coverage.py  fix_hunting_coverage_2.py  fix_hunting_debug.py  fix_hunting_debug_2.py  fix_hunting_debug_3.py  fix_hunting_tests.py  fix_hunting_tests_10.py  fix_hunting_tests_11.py  fix_hunting_tests_12.py  fix_hunting_tests_2.py  fix_hunting_tests_3.py  fix_hunting_tests_4.py  fix_hunting_tests_5.py  fix_hunting_tests_6.py  fix_hunting_tests_7.py  fix_hunting_tests_8.py  fix_hunting_tests_9.py  fix_hunting_warnings.py  fix_hunting_warnings_2.py  fix_hunting_warnings_3.py  fix_hunting_warnings_4.py  fix_portal_120.py  fix_portal_coverage.py  fix_portal_coverage_2.py  fix_portal_coverage_3.py  fix_portal_tests.py  fix_portal_tests_2.py  fix_pvp_coverage.py  fix_pvp_coverage_2.py  fix_pvp_coverage_3.py  fix_setup_coverage.py  (+42 more)
utils/: button_utils.py  embed_utils.py  emoji_utils.py  helpers.py  land_utils.py  revomon_utils.py  tl_img_gen.py
(+96 files in other folders)
